# chintai_sagashi

./: .env-example  .gitignore  README.md  pyproject.toml
src/: constants.py  locations.py  scrapper.py
