[project]
name = "chintai-sagashi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.40.50",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "ruff>=0.14.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.2.2",
    "ipykernel>=6.29.5",
]
